--- a/08-HTML/homework/HOMEWORK.HTML
+++ b/08-HTML/homework/HOMEWORK.HTML
@@ -17,8 +17,8 @@
     </div>
     <div id="thirdDiv" style="background-color: darkblue;" style="padding: red;" style="border: 10px green;" style="padding: 50px;"  style="height: 600px; width: 500px;>
         <ul>
-        <li>milanesa <img src=""></li>
-        <li>pure <img src=""></li>
+        <li> pure <img src="https://cdn2.cocinadelirante.com/sites/default/files/styles/gallerie/public/images/2020/04/como-congelar-pure-de-papa-drong.jpg"> </li>
+        <li> milanesa <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Weekend_in_Buenos_Aires.jpg"></li>
 </div>
 </body>
 </html>
