--- a/08-HTML/homework/HOMEWORK.HTML
+++ b/08-HTML/homework/HOMEWORK.HTML
@@ -15,10 +15,11 @@
         <span id="spanId" style="margin: 50px;" style="font-size: 18px;">milanesa con pure</span>
         <a href="https://www.elclubdelamilanesa.com"></a>
     </div>
-    <div id="thirdDiv" style="background-color: darkblue;" style="padding: red;" style="border: 10px green;" style="padding: 50px;"  style="height: 600px; width: 500px;>
+    <div id="thirdDiv" style="background-color: darkblue;" style="padding: red;" style="border: 10px green;" style="padding: 50px;"  style="height: 600px; width: 500px;">
         <ul>
         <li> pure <img src="https://cdn2.cocinadelirante.com/sites/default/files/styles/gallerie/public/images/2020/04/como-congelar-pure-de-papa-drong.jpg"> </li>
         <li> milanesa <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Weekend_in_Buenos_Aires.jpg"></li>
-</div>
+        </ul>
+    </div>
 </body>
 </html>
