--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -8,15 +8,15 @@
 </head>
 <body>
      <h1>Curriculum Vitae</h1>
-<h4><br> Descripción personal</br></h4><p>Me llamo Cristian Lesdesma, tengo 24 años, soy de Buenos Aires; Argentina, entre mis mayores intereses se destacan la progrmación web y temas ralcionadas con el area, soy un persona con facilidad de aprendizaje y con ganas de mejorar día a día</p>
-<div><h4><br>Educación</h4> <ul>
+<h4><b> Descripción personal</b></h4><p>Me llamo Cristian Lesdesma, tengo 24 años, soy de Buenos Aires; Argentina, entre mis mayores intereses se destacan la progrmación web y temas ralcionadas con el area, soy un persona con facilidad de aprendizaje y con ganas de mejorar día a día</p>
+<div><h4><b>Educación</h4> <ul>
     <li>Bachillerato en Ciencias Sociales(Finalizado en 2015)</li>
     <li>Unlz Abogacía (en curso desde el 2016)</li>
 </ul></div>
-<h4><br>Experiencia Laborales:</br></h4><ul> 
+<h4><b>Experiencia Laborales:</b></h4><ul> 
    <li>Backoffice en oficina de seguros, en el area comercial y cobranzas</li> 
 </ul> 
-<h4><br>Skills:</br></h4><ul>
+<h4><b>Skills:</b></h4><ul>
     <li>Cratividad</li>
     <li>Adaptabilidad</li>
     <li>Toma de decisiones</li>
@@ -42,4 +42,7 @@
 <div>
     <img src="https://instagram.fepa10-1.fna.fbcdn.net/v/t51.2885-19/106472407_353302508987652_3116953945933448886_n.jpg?stp=dst-jpg_s320x320&_nc_ht=instagram.fepa10-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=2FfWf6cVqlgAX8UsLaN&edm=ABfd0MgBAAAA&ccb=7-4&oh=00_AT_eMBic6K9Ky-UtQhELv3QWl8qZ2dTOXEWAWdh1khlkKQ&oe=6245D48F&_nc_sid=7bff83"></div>
 </body>
+
+<h4>INTERESES EN LA CARRERA:</h4> <p>Desde siempre me intereso la carrera en programación, hasta hace poco tiempo pude inscribirme a la misma debido a que por los horarios de mi trabajo no podría inscribirme. <br>
+Mis metas es conseguir un empleo en un empresa en donde pueda mejorar y pulir mis habilidades en progrmación.</p>
 </html>
