--- a/08-HTML/homework/HOMEWORK.HTML
+++ b/08-HTML/homework/HOMEWORK.HTML
@@ -21,5 +21,6 @@
         <li> milanesa <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Weekend_in_Buenos_Aires.jpg"></li>
         </ul>
     </div>
+    <img src="">
 </body>
 </html>
